--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,16 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
 certifi==2022.12.7
-charset-normalizer==3.1.0
+charset-normalizer==3.0.1
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
-openai==0.27.2
+openai==0.26.5
 pyTelegramBotAPI==4.10.0
-python-decouple==3.6
 requests==2.28.2
+setuptools==65.5.1
 telebot==0.0.5
-tqdm==4.65.0
-urllib3==1.26.15
+tqdm==4.64.1
+urllib3==1.26.14
+wheel==0.38.4
 yarl==1.8.2
